[gd_scene load_steps=54 format=2]

[ext_resource path="res://scenes/actors/player/Idle.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/actors/player.png" type="Texture" id=2]
[ext_resource path="res://scripts/classes/nodes/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://scenes/actors/player/Climb.gd" type="Script" id=4]
[ext_resource path="res://scenes/actors/player/Bob.gd" type="Script" id=5]
[ext_resource path="res://scenes/components/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/actors/player/Hurt.gd" type="Script" id=7]
[ext_resource path="res://scenes/actors/player/Run.gd" type="Script" id=8]
[ext_resource path="res://scenes/actors/player/ScreenTrans.gd" type="Script" id=9]
[ext_resource path="res://scripts/screen_shake.gd" type="Script" id=10]

[sub_resource type="Animation" id=38]
resource_name = "HurtLeft"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 17, 16, 17, 16, 17, 16, 17, 16, 17, 16, 17, 16, 17, 16 ]
}

[sub_resource type="Animation" id=37]
resource_name = "HurtRight"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 17, 16, 17, 16, 17, 16, 17, 16, 17, 16, 17, 16, 17, 16 ]
}

[sub_resource type="Animation" id=24]
resource_name = "IdleCarryLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=25]
resource_name = "IdleCarryRight"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleRight"
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=20]
resource_name = "RunCarryLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
resource_name = "RunCarryRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "RunLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "RunRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Frames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Frames:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "HurtLeft"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "HurtRight"

[sub_resource type="AnimationNodeBlendSpace1D" id=41]
blend_point_0/node = SubResource( 39 )
blend_point_0/pos = -1.0
blend_point_1/node = SubResource( 40 )
blend_point_1/pos = 1.0
value_label = "x"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace1D" id=12]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = -1.0
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = 1.0
value_label = "x"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "IdleCarryLeft"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleCarryRight"

[sub_resource type="AnimationNodeBlendSpace1D" id=23]
blend_point_0/node = SubResource( 26 )
blend_point_0/pos = -1.0
blend_point_1/node = SubResource( 27 )
blend_point_1/pos = 1.0
value_label = "x"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "RunRight"

[sub_resource type="AnimationNodeBlendSpace1D" id=13]
blend_point_0/node = SubResource( 16 )
blend_point_0/pos = -1.0
blend_point_1/node = SubResource( 17 )
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "RunCarryLeft"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "RunCarryRight"

[sub_resource type="AnimationNodeBlendSpace1D" id=18]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = -1.0
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = 1.0
value_label = "x"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachine" id=6]
states/Hurt/node = SubResource( 41 )
states/Hurt/position = Vector2( -188, 184 )
states/Idle/node = SubResource( 12 )
states/Idle/position = Vector2( 74, 40 )
states/IdleCarry/node = SubResource( 23 )
states/IdleCarry/position = Vector2( 74, 148 )
states/Run/node = SubResource( 13 )
states/Run/position = Vector2( 324, 40 )
states/RunCarry/node = SubResource( 18 )
states/RunCarry/position = Vector2( 324, 148 )
transitions = [ "Idle", "Run", SubResource( 14 ), "Run", "Idle", SubResource( 15 ), "Run", "RunCarry", SubResource( 21 ), "RunCarry", "Run", SubResource( 22 ), "Idle", "IdleCarry", SubResource( 28 ), "IdleCarry", "Idle", SubResource( 29 ), "IdleCarry", "RunCarry", SubResource( 30 ), "RunCarry", "IdleCarry", SubResource( 31 ), "Idle", "Hurt", SubResource( 42 ), "Hurt", "Idle", SubResource( 43 ) ]
start_node = "Idle"
graph_offset = Vector2( -349, -34 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[sub_resource type="Animation" id=34]
resource_name = "Hurt"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=36]
resource_name = "HurtStart"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.992157, 1, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.992157, 1, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.992157, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=35]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.5
height = 15.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 14.5 )

[node name="Bob" type="KinematicBody2D" groups=["player"]]
light_mask = 0
collision_layer = 4
collision_mask = 3
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": "Jump height: c. 3 1/2 tiles",
"collision_layer": 4,
"collision_mask": 3
}
speed_cap = Vector2( 75, 300 )
snap_length = 5.0
disabled = null

[node name="Frames" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HurtLeft = SubResource( 38 )
anims/HurtRight = SubResource( 37 )
anims/IdleCarryLeft = SubResource( 24 )
anims/IdleCarryRight = SubResource( 25 )
anims/IdleLeft = SubResource( 8 )
anims/IdleRight = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/RunCarryLeft = SubResource( 20 )
anims/RunCarryRight = SubResource( 19 )
anims/RunLeft = SubResource( 9 )
anims/RunRight = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 7 )
parameters/Hurt/blend_position = 0
parameters/Idle/blend_position = 0.0
parameters/IdleCarry/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )
parameters/RunCarry/blend_position = Vector2( 0, 0 )

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 34 )
anims/HurtStart = SubResource( 36 )
anims/RESET = SubResource( 35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.0156863, 0.862745, 0.168627, 1 )
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." groups=["player_camera"]]
pause_mode = 2
current = true
zoom = Vector2( 0.4, 0.4 )
limit_left = 0
limit_top = 0
limit_bottom = 480
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 8.0
script = ExtResource( 10 )

[node name="States" type="Node" parent="."]
script = ExtResource( 3 )
root_node = NodePath("..")
paused = false

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 1 )

[node name="Run" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Climb" type="Node" parent="States"]
script = ExtResource( 4 )
ladder_climb_speed = 50.0

[node name="Hurt" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="ScreenTrans" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[connection signal="animation_finished" from="HurtAnimation" to="." method="_on_HurtAnimation_animation_finished"]
[connection signal="state_signal" from="States" to="." method="_on_States_state_signal"]

[editable path="Hurtbox"]
